2004-09-16  Heikki Junes  <hjunes@cc.hut.fi>

	 * Documentation/user/{changing-defaults,examples,invoking,
	 tutorial}.itely: Expand 's to is.

	 *  Documentation/user/notation.itely: Capitalize only first letter.

	 *  Documentation/user/programming-interface.itely: Capitalize Scheme.

	 *  Documentation/user/lilypond-book.itely: use @refbugs.
 
	 *  THANKS: sort.
 
         *  input/mutopia/F.Schubert/morgenlied.ly,
         input/mutopia/J.S.Bach/baerenreiter-sarabande.ly,
         input/mutopia/R.Schumann/romanze-op28-2.ly: Add lifetime and full name.

2004-09-15  Juergen Reuter  <reuter@ipd.uka.de>

	* mf/parmesan-heads.mf: bugfixes: (i) removed duplicate
	lneomensural char entry; (ii) fixed mensural/neomensural naming
	clash typo; (iii) lneomensural char: fixed stem attachment point.
	WARNING: FONT CHANGED!

2004-09-15  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/introduction.itely: update \stemBoth to \stemNeutral

	* Documentation/user/notation.itely: more editing of the manual.

2004-09-15  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (score_edges): add exp(slope*dir*leftright)
	factor in edge attraction. This reflects that the left edge may
	have a larger gap for an ascending up-slur.
	(get_base_attachments): copy bound Y from right bound, if there is
	only one note-column after the line break.

2004-09-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/guile-gnome.sh: Update with tarball [pre]releases.

2004-09-14  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/phrasing-slur-engraver.cc (process_music): Create
	PhrasingSlur instead of Slur.

	* Documentation/user/changing-defaults.itely (Defining new
	contexts): Fixed misprinted context name.

2004-09-13  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (score_edges): don't be so picky for

	* ly/property-init.ly (hideStaffSwitch): remove turnOff.

	* scripts/convert-ly.py (conv): change Both to Neutral in property
	settings.
