@@ -1,3 +1,8 @@
+2004-09-16  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/ledger-line-spanner.cc: add ledgered-interface, with
+	property no-ledgers.
+
 2004-09-16  Heikki Junes  <hjunes@cc.hut.fi>
 
 	 * Documentation/user/{changing-defaults,examples,invoking,
